should have fixed issue where movies would display rather than show button to display them. centered movie descriptions on mobile and fixed up genre container a bit.

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -290,12 +290,12 @@ h1 {
   flex-direction: column;
   flex-wrap: wrap;
   margin: 0 auto;
-  max-width: 250px;
+  max-width: 230px;
   max-height: 250px;
   text-align: left;
   justify-content: center;
   align-content: center;
-  padding-left: 40px;
+  padding-left: 30px;
 }
 
 .movie_genre_genres {
@@ -362,8 +362,6 @@ h1 {
   background-color: var(--main-bg-color);
   z-index: 4;
   width: 70%;
-  left: 15%;
-  right: 15%;
   padding: 20px;
   box-shadow: 0px 0px 1.5px;
 }
